# graphql-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PR_DATALOADER_PATTERN.md  PR_SUBSCRIPTION_SUPPORT.md  README.md  clippy.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: 01-graphql-fundamentals.md  02-domain-model.md  03-schema-definition.md  04-query-execution.md  05-mutation-support.md  06-validation.md  07-error-handling.md  08-subscription-support.md  09-dataloader-pattern.md  FORMATTING.md
examples/: dataloader_pattern_demo.rs  enhanced_error_handling_demo.rs  graphql_dataloader_integration.rs  lexer_test.rs  subscription_support_demo.rs  test_core_functionality.rs  test_mutation_support.rs  test_query_execution.rs
scripts/: dev.sh
src/: lib.rs  main.rs
src/application/: dto.rs  mod.rs  server.rs  services.rs  use_cases.rs
src/application/services/: mod.rs  schema_service.rs
src/domain/: entities.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/domain/entities/: ids.rs  mod.rs  query.rs  schema.rs  types.rs
src/infrastructure/: http.rs  lexer.rs  mod.rs  parser.rs  persistence.rs  query_parser.rs
src/presentation/: graphql.rs  mod.rs  rest.rs
tests/: dataloader_tests.rs  error_handling_tests.rs  subscription_tests.rs
