[package]
name = "graphql-rs"
version = "0.1.0"
edition = "2021"
authors = ["Original Author <original@email.com>"]
license = "MIT"
description = "A GraphQL server implementation in Rust built from scratch for learning"
repository = "https://github.com/elsonwu/graphql-rs"
readme = "README.md"
keywords = ["graphql", "server", "web", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parsing and lexing
nom = "7.1"
logos = "0.13"

# Collections
indexmap = { version = "2.0", features = ["serde"] }
dashmap = "5.5"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Tracing and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Enable some optimizations for better development experience
opt-level = 1
